# docs/openapi.json
@@ -4148,6 +4148,58 @@
         }
       }
     },
+    "/api/hermes/files/search": {
+      "get": {
+        "tags": [
+          "Files"
+        ],
+        "summary": "Get search",
+        "description": "GET /api/hermes/files/search",
+        "operationId": "getSearch",
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "404": {
+            "description": "Not found"
+          }
+        },
+        "parameters": [
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "path",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "q",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ]
+      }
+    },
     "/api/hermes/files/stat": {
       "get": {
         "tags": [
